--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	    		<a href="P4.docx" download="Podręcznik Star Wars v04.docx"><img src="https://randymartinez.files.wordpress.com/2013/10/fire-fight-on-the-space-range-72.jpg" alt="Star Wars Podręcznik" class="photo1"></a>
 	      <h>Podręcznik Star Wars</h>
 	      <p>Link do pobrania obecnej wersji podręcznika Star-Wars</p>
+	      <a href="SWPodr.pdf">a</a>
 	      	
 	     	</div>
   		</div>
