--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="col-xl-6" id="colone">
     	<div class=row>
 	    	<div class="col-sm-12">
-	    		<a href="P4.docx" download="Podręcznik Star Wars v04.docx"><img src="https://randymartinez.files.wordpress.com/2013/10/fire-fight-on-the-space-range-72.jpg" alt="Star Wars Podręcznik" class="photo1"></a>
+	    		<a href="SWPodr.pdf"><img src="https://randymartinez.files.wordpress.com/2013/10/fire-fight-on-the-space-range-72.jpg" alt="Star Wars Podręcznik" class="photo1"></a>
 	      <h>Podręcznik Star Wars</h>
 	      <p>Link do pobrania obecnej wersji podręcznika Star-Wars</p>
 	      <a href="SWPodr.pdf">a</a>
