--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   </div>
 </div>
 
+<iframe width="100%" height="600" src="https://www.docdroid.net/4MkQDwL/swpodr.pdf" frameborder="0" allowtransparency allowfullscreen></iframe>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
