--- a/star.html
+++ b/star.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dino-Strona</title>
+		<title>Dino-Strona</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Lacquer|Merienda&display=swap" rel="stylesheet">
@@ -44,44 +44,11 @@
   </div>
 </nav>
 
-
-<div class="jumbotron">
-		  <h1 class="display-4">Roaaar!</h1>
-		  <img src="din.png" id="dinoimg">
-		  <p class="lead">Dino-Strona została zaprojektowana do składowania ważnych Dino-Plików. Jeżeli nie jesteś upoważniony by je przeglądać, strzeż się Dinozaura. ;)</p>
-		  <hr class="my-4">
-		  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-		  <a class="btn btn-primary btn-lg" id="dinbut" href="#" role="button">Learn more</a>
-	</div>
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xl-6" id="colone">
-    	<div class=row>
-	    	<div class="col-sm-12">
-	    		<a href="star.html"><img src="https://randymartinez.files.wordpress.com/2013/10/fire-fight-on-the-space-range-72.jpg" alt="Star Wars Podręcznik" class="photo1"></a>
-	      <h>Podręcznik Star Wars</h>
-	      <p>Link do pobrania obecnej wersji podręcznika Star-Wars</p>
-	      	
-	     	</div>
-  		</div>
- 	</div>
-
-    <div class="col-xl-6" id="coltwo">
-      <div class=row>
-      	<div class="col-sm-12">
-      	<a href=""><img src="https://scontent.fwaw3-2.fna.fbcdn.net/v/t1.15752-9/s2048x2048/67887637_2141283765978132_6224013932437176320_n.jpg?_nc_cat=107&_nc_oc=AQnJeVFFPcsG9kvc28O34jHpho-0m1NFxPSelXxv7lnKWJD8ZMwwEmc5g_bT1dJ6h30&_nc_ht=scontent.fwaw3-2.fna&oh=0aec7f114e3caccf8dd1e0b7fbcc466d&oe=5DDAEA76" alt="Zdjęcia" class="photo2"></a>
-      <h>Najnowsze zdjęcia</h>
-      <p>Galeria nowej kolekcji zdjęć do przejrzenia</p></div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<iframe width="100%" height="1200" src="https://www.docdroid.net/4MkQDwL/swpodr.pdf" frameborder="0" allowtransparency allowfullscreen></iframe>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </body>
 </html>
